--- a/styles.css
+++ b/styles.css
@@ -432,14 +432,18 @@ footer{
 /* For the corgi graphic */
 /* 
     TO DO: add styles to the image in this section that will:
-        - turn this into a block-level element
-        - make this display at 200px wide
-        - set the height to auto
-        - add margin to center this element
-        - add the small filter drop shadow from the CSS variables in the root
+        - turn this into a block-level element √
+        - make this display at 200px wide √
+        - set the height to auto √
+        - add margin to center this element √
+        - add the small filter drop shadow from the CSS variables in the root √
 */
 #section3 img{
-    
+    display: block;
+    width: 200px;
+    height: auto;
+    margin: auto;
+    filter: var(--filter-shadow-sm);    
 }
 
 #section3 div::before{
