--- a/styles.css
+++ b/styles.css
@@ -474,17 +474,27 @@ footer{
 /* 
     TO DO: add styles to the after pseudo-element on the div in this section that will:
         - add content (empty string)
-        - make this display as a block-level element
-        - make this 50px wide
-        - make this 50px tall
-        - make the background the lt-blue color
-        - turn this square div into a circle
-        - set the position to relative
-        - give this a z-index of 2
+        - make this display as a block-level element √
+        - make this 50px wide √
+        - make this 50px tall √
+        - make the background the lt-blue color √
+        - turn this square div into a circle ?
+        - set the position to relative √
+        - give this a z-index of 2 √
         - move this up from its original location by 50px
         - move this to the right from its original location by 25px
 */
 #section3 div::after{
+    content: "";
+    display: block;
+    width: 50px;
+    height: 50px;
+    background-color: var(--lt-blue);
+    border-radius: 50%;
+    position: relative;
+    z-index: 2;
+    margin: -50px 0 0 25px;
+
 }
 
 
