--- a/styles.css
+++ b/styles.css
@@ -622,7 +622,7 @@ footer{
 
 /* Let's tell our images to float to the left. Remember, they'll sort of pile up next to each other in the container, but only if they're narrow enough to fit! */
 /* 
-    TO DO: add styles to the image with the ID of corgi in this section that will:
+    TO DO: add styles to the image with the ID of corgi in this section that will: [already done] 
         - float this image to the left
         - add 1 rem of margin to the right of the image
 */
@@ -640,7 +640,7 @@ footer{
         - float the image to the right
 */
 #dog-house{
-    
+    float: right;
 }
 
 /* When you use floats, you have to be sure to clear them so that the rest of your page after the floats displays normally. Let's use the display section to clear the floats (because it is the next tag outside of our container in the HTML) */
@@ -649,7 +649,7 @@ footer{
         - clear any floats
 */
 #section9{
-    
+    clear: both;
 }
 
 /* ------------- SECTION 9 STYLES ---------------- */
